--- a/index.html
+++ b/index.html
@@ -216,11 +216,11 @@
                                                 </div>
                                             </td>
                                         </tr>
-                                        <tr>
+                                         <tr>
                                             <td>
                                                 <div>
-                                                    <div class="d-lg-flex d-xxl-flex justify-content-lg-start align-items-lg-center justify-content-xxl-start align-items-xxl-center"><img class="image" src="assets/img/___kendricklamar_____-20200531-0001.jpg" style="width: 40px;height: 40px;">
-                                                        <p style="margin-left: 9px;font-weight: bold;color: rgb(0,0,0);margin-bottom: 0px;">Kendrick</p>
+                                                    <div class="d-lg-flex d-xxl-flex justify-content-lg-start align-items-lg-center justify-content-xxl-start align-items-xxl-center"><img class="image" src="assets/img/lilireinhart-20200425-0001.jpg" style="width: 40px;height: 40px;">
+                                                        <p style="margin-left: 9px;font-weight: bold;color: rgb(0,0,0);margin-bottom: 0px;">soso</p>
                                                     </div>
                                                 </div>
                                             </td>
